Add ByteBuddy to disable Paging logging on desktop